package Jeu.Element;

public class Air extends Affinite {

    public Air(){
        super("Air");
        m_avantage = "Terre" ;
        m_faiblesse = "Feu" ;
    }

}
