package Jeu.Element;

public class Eau extends Affinite {


    public Eau(){
        super("Eau");
        m_avantage = "Feu" ;
        m_faiblesse = "Terre" ;
    }

}
