package Jeu.Element;

public class Feu extends Affinite {


    public Feu(){
        super("Feu");
        m_avantage = "Air" ;
        m_faiblesse = "Eau" ;
    }

}
