package Jeu.Element;

public class Terre extends Affinite {

    public Terre(){
        super("Terre");
        m_avantage = "Eau" ;
        m_faiblesse = "Air" ;
    }

}
